--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Sample Landing Page">
-  <meta name="keywords" content="landing page, portfolio, works">
+  <meta name="keywords" content="landing page, portfolio, works, framework">
   <title>Unique Tech</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <link rel="stylesheet" href="css/hover.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -25,7 +25,8 @@
             <img src="img/logo.png">
           </p>
 
-          <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+          <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+            data-target="navbarBasicExample">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
@@ -74,7 +75,8 @@
   <section class="section" id="services">
     <div class="container is-fluid">
       <div class="">
-        <div id="section-header" class="column is-4 has-text-centered has-background-grey-dark has-text-white has-text-weight-bold">
+        <div id="section-header"
+          class="column is-4 has-text-centered has-background-grey-dark has-text-white has-text-weight-bold">
           <p class="is-size-4">WHAT WE DO</p>
         </div>
       </div>
@@ -139,7 +141,8 @@
   <section class="section" id="about">
     <div class="container is-fluid">
       <div class="">
-        <div id="section-header" class="column is-4 has-text-centered has-background-grey-dark has-text-white has-text-weight-bold">
+        <div id="section-header"
+          class="column is-4 has-text-centered has-background-grey-dark has-text-white has-text-weight-bold">
           <p class="is-size-4">HOW WE WORK</p>
         </div>
       </div>
@@ -211,7 +214,8 @@
   <section class="section" id="features">
     <div class="container is-fluid">
       <div>
-        <div id="section-header" class="column is-4 has-text-centered has-background-grey-dark has-text-white has-text-weight-bold">
+        <div id="section-header"
+          class="column is-4 has-text-centered has-background-grey-dark has-text-white has-text-weight-bold">
           <p class="is-size-4">OUR FEATURES</p>
         </div>
       </div>
@@ -318,7 +322,8 @@
   <section class="section" id="packages">
     <div class="container is-fluid">
       <div class="packages-box">
-        <div id="section-header" class="column is-4 has-text-centered has-background-grey-dark has-text-white has-text-weight-bold">
+        <div id="section-header"
+          class="column is-4 has-text-centered has-background-grey-dark has-text-white has-text-weight-bold">
           <p class="is-size-4">OUR PACKAGES</p>
         </div>
       </div>
@@ -449,7 +454,8 @@
   <section class="section" id="business-related">
     <div class="container is-fluid">
       <div>
-        <div id="section-header" class="column is-4 has-text-centered has-background-grey-dark has-text-white has-text-weight-bold">
+        <div id="section-header"
+          class="column is-4 has-text-centered has-background-grey-dark has-text-white has-text-weight-bold">
           <p class="is-size-4">OUR BUSINESS RELATED PROJECTS</p>
         </div>
       </div>
@@ -507,7 +513,8 @@
   <section class="section" id="team-members">
     <div class="container is-fluid">
       <div class="">
-        <div id="section-header" class="column is-4 has-text-centered has-background-grey-dark has-text-white has-text-weight-bold">
+        <div id="section-header"
+          class="column is-4 has-text-centered has-background-grey-dark has-text-white has-text-weight-bold">
           <p class="is-size-4">OUR TEAM MEMBERS</p>
         </div>
       </div>
@@ -571,7 +578,8 @@
     <div class="container is-fluid">
       <div class="
       ">
-        <div id="section-header" class="column is-4 has-text-centered has-background-grey-dark has-text-white has-text-weight-bold">
+        <div id="section-header"
+          class="column is-4 has-text-centered has-background-grey-dark has-text-white has-text-weight-bold">
           <p class="is-size-4">UPDATES &amp; SUPPORT</p>
         </div>
       </div>
