Change footer text 09152020

--- a/index.html
+++ b/index.html
@@ -709,7 +709,11 @@
             </a></li>
         </ul>
 
-        <p>Copyright &copy; Syed Miraj. All Rights Reserved.</p>
+        <div class="copyright-container">
+          <p>Copyright &copy; Syed Miraj. All Rights Reserved.</p>
+          <p>UNIQUE-TECH Website UI Freebie Template</p>
+          <p>Source: <a href="https://www.behance.net/gallery/31522763/UNIQUE-TECH-Website-UI-Freebie" target="_blank">https://www.behance.net/gallery/31522763/UNIQUE-TECH-Website-UI-Freebie</a></p>
+        </div>
       </div>
     </div>
   </footer>
